# icub-bimanual

./: CMakeLists.txt  client_start.sh  server_start.sh  start.sh  stop.sh
config/: ergocub-fixed-torso.ini  ergocub.ini  icub2.ini
config/ergocub/: cartesian_actions.ini  control_parameters.ini  grasp_actions.ini  joint_space_actions.ini
config/ergocub-fixed-torso/: cartesian_actions.ini  control_parameters.ini  joint_space_actions.ini
config/icub2/: cartesian_actions.ini  control_parameters.ini  grasp_actions.ini  joint_configurations.ini  joint_space_actions.ini
docker/: docker-compose.yaml  ecub-manip.Dockerfile  yarp-gazebo.Dockerfile
gazebo/worlds/: ergocub_grasp_demo.sdf  test_corridor.sdf
include/: CartesianTrajectory.cpp  CartesianTrajectory.h  ForceControl.h  JointInterface.cpp  JointInterface.h  Payload.h  PositionControl.cpp  PositionControl.h  Probe.h  QPSolver.cpp  QPSolver.h  Utilities.h  ergoCub.h  ergoCubConfigurations.h  iCub2.cpp  iCub2.h  iCub2Configurations.h  iCub3.h  iCubBase.cpp  iCubBase.h  iCubTorque.h  iCubVelocity.h
interface/: CMakeLists.txt  CommandInterface.thrift  ManipulationInterface.thrift  manipulation_interface.thrift
src/: CartesianTrajectory.cpp  CommandPrompt.cpp  CommandServer.cpp  ForceControl.cpp  JointInterface.cpp  Payload.cpp  PositionControl.cpp  Probe.cpp  QPSolver.cpp  Utilities.cpp  ergocub_grasp_demo.cpp  grasp-demo.cpp  iCub2.cpp  iCub2CommandServer.cpp  iCub2ControlServer.cpp  iCub2_Grasp_Demo.cpp  iCubBase.cpp  icub2_grasp_demo.cpp  test_build.cpp
